--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "rimraf": "^5.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "cron": "^3.1.7"
   }
 }
