--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "cron": "^3.1.7"
+    "cron": "^3.1.7",
+    "dotenv": "^16.4.5",
+    "env-var": "^7.5.0"
   }
 }
