--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd",
   "devDependencies": {
     "@types/node": "^20.14.4",
+    "@types/nodemailer": "^6.4.15",
     "rimraf": "^5.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
@@ -21,6 +22,7 @@
   "dependencies": {
     "cron": "^3.1.7",
     "dotenv": "^16.4.5",
-    "env-var": "^7.5.0"
+    "env-var": "^7.5.0",
+    "nodemailer": "^6.9.14"
   }
 }
