--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
+    "mongoose": "^8.4.3",
     "nodemailer": "^6.9.14"
   }
 }
