chore: 🚧 Add PostgreSQL configuration to docker-compose.yml and .env.template

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,12 @@
 MAILER_EMAIL=
 MAILER_SECRET_KEY=
 MAILER_SERVICE=
+
 MONGO_URL=
 MONGO_DB_NAME=
 MONGO_USER=
 MONGO_PASS=
+
+POSTGRES_USER=
+POSTGRES_PASS=
+POSTGRES_DB=
