--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,14 @@ services:
       - ./mongo:/data/db
     ports:
       - 27017:27017
+  postgres-db:
+    image: postgres:16.3
+    restart: always
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASS}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
