chore: 🚧 Update dependencies and configurations for PostgreSQL and MongoDB logging

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,7 @@ MONGO_DB_NAME=
 MONGO_USER=
 MONGO_PASS=
 
+POSTGRES_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 POSTGRES_USER=
 POSTGRES_PASS=
 POSTGRES_DB=
