--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "devDependencies": {
     "@types/node": "^20.14.4",
     "@types/nodemailer": "^6.4.15",
+    "prisma": "^5.15.1",
     "rimraf": "^5.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "5.15.1",
+    "@prisma/extension-accelerate": "^1.1.0",
     "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
