--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
   "scripts": {
     "dev": "tsnd --respawn --clear src/app.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/app.js"
+    "start": "npm run build && node dist/app.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.4",
     "@types/nodemailer": "^6.4.15",
+    "jest": "^29.7.0",
     "prisma": "^5.15.1",
     "rimraf": "^5.0.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
